// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components-pro/date-picker/demo/basic.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          placeholder="Select date"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          placeholder="Select month"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          placeholder="Select year"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          placeholder="Select date time"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          placeholder="Select time"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button c7n-pro-calendar-picker-not-editable"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          placeholder="Select week"
          readonly=""
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-disabled c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          disabled=""
          placeholder="禁用"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/date-picker/demo/controlled.md correctly 1`] = `
Array [
  <span
    class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
  >
    <label>
      <input
        autocomplete="off"
        class="c7n-pro-calendar-picker"
        placeholder="controlled"
        type="text"
        value=""
      />
      <div
        class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
      >
        <i
          class="icon icon-close"
        />
      </div>
      <div
        class="c7n-pro-calendar-picker-suffix"
      >
        <i
          class="icon icon-date_range c7n-pro-calendar-picker-trigger"
        />
      </div>
    </label>
  </span>,
  <span />,
]
`;

exports[`renders ./components-pro/date-picker/demo/dataset.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          name="birth"
          type="text"
          value="1984-11-22"
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          name="creationTime"
          type="text"
          value="2017-12-22 15:00:00"
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/date-picker/demo/format.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          name="time"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          name="time2"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/date-picker/demo/min-max.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          name="startDate"
          placeholder="start date"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          name="endDate"
          placeholder="end date"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          min="1479744000000"
          placeholder="Moment min & filter"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          min="Tue Nov 22 2016 00:00:00 GMT+0800 (China Standard Time)"
          placeholder="Date min"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          max="2021-12-10"
          placeholder="string max"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
    >
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-calendar-picker"
          min="1479744000000"
          placeholder="Select date time"
          type="text"
          value=""
        />
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/date-picker/demo/multiple.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-required c7n-pro-calendar-picker-suffix-button c7n-pro-calendar-picker-multiple"
    >
      <input
        class="c7n-pro-calendar-picker-multiple-value"
        name="date"
        value="Thu Nov 22 1984 00:00:00 GMT+0800,Fri Aug 09 2019 00:00:00 GMT+0800"
      />
      <div
        class="c7n-pro-calendar-picker-placeholder"
      >
        数据源多选
      </div>
      <label>
        <div
          class="c7n-pro-calendar-picker"
        >
          <ul>
            <li
              class="c7n-pro-calendar-picker-multiple-block"
            >
              <div>
                1984-11-22
              </div>
              <i
                class="icon icon-cancel"
                tabindex="-1"
              />
            </li>
            <li
              class="c7n-pro-calendar-picker-multiple-block"
            >
              <div>
                2019-08-09
              </div>
              <i
                class="icon icon-cancel"
                tabindex="-1"
              />
            </li>
            <li>
              <input
                autocomplete="off"
                class="c7n-pro-calendar-picker-multiple-input"
                name="date"
                type="text"
                value=""
              />
            </li>
          </ul>
        </div>
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-suffix-button c7n-pro-calendar-picker-multiple"
    >
      <input
        class="c7n-pro-calendar-picker-multiple-value"
        value="1479744000000"
      />
      <div
        class="c7n-pro-calendar-picker-placeholder"
      >
        多选
      </div>
      <label>
        <div
          class="c7n-pro-calendar-picker"
        >
          <ul>
            <li
              class="c7n-pro-calendar-picker-multiple-block"
            >
              <div>
                2016-11-22
              </div>
              <i
                class="icon icon-cancel"
                tabindex="-1"
              />
            </li>
            <li>
              <input
                autocomplete="off"
                class="c7n-pro-calendar-picker-multiple-input"
                multiple=""
                type="text"
                value=""
              />
            </li>
          </ul>
        </div>
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/date-picker/demo/range.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-24"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-required c7n-pro-calendar-picker-suffix-button c7n-pro-calendar-picker-range"
    >
      <label>
        <span
          class="c7n-pro-calendar-picker"
        >
          <span
            class="c7n-pro-calendar-picker-range-text"
          >
            <input
              class="c7n-pro-calendar-picker-range-start"
              placeholder="Start Date"
              readonly=""
              tabindex="-1"
              value="1984-11-22"
            />
            <span
              class="c7n-pro-calendar-picker-range-split"
            >
              ~
            </span>
            <input
              class="c7n-pro-calendar-picker-range-end"
              placeholder="End Date"
              readonly=""
              tabindex="-1"
              value="2016-11-22"
            />
            <input
              autocomplete="off"
              class="c7n-pro-calendar-picker-range-input"
              name="date"
              placeholder=""
              style="left:0"
              type="text"
              value=""
            />
          </span>
        </span>
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-24"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-suffix-button c7n-pro-calendar-picker-range"
    >
      <label>
        <span
          class="c7n-pro-calendar-picker"
        >
          <span
            class="c7n-pro-calendar-picker-range-text"
          >
            <input
              class="c7n-pro-calendar-picker-range-start"
              placeholder="Start Date"
              readonly=""
              tabindex="-1"
              value="1985-11-22"
            />
            <span
              class="c7n-pro-calendar-picker-range-split"
            >
              ~
            </span>
            <input
              class="c7n-pro-calendar-picker-range-end"
              placeholder="End Date"
              readonly=""
              tabindex="-1"
              value="2016-11-22"
            />
            <input
              autocomplete="off"
              class="c7n-pro-calendar-picker-range-input"
              name="date2"
              placeholder=""
              style="left:0"
              type="text"
              value=""
            />
          </span>
        </span>
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-24"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-suffix-button c7n-pro-calendar-picker-range"
    >
      <label>
        <span
          class="c7n-pro-calendar-picker"
        >
          <span
            class="c7n-pro-calendar-picker-range-text"
          >
            <input
              class="c7n-pro-calendar-picker-range-start"
              placeholder="Start Date"
              readonly=""
              tabindex="-1"
              value="1986-11-22"
            />
            <span
              class="c7n-pro-calendar-picker-range-split"
            >
              ~
            </span>
            <input
              class="c7n-pro-calendar-picker-range-end"
              placeholder="End Date"
              readonly=""
              tabindex="-1"
              value="2016-11-22"
            />
            <input
              autocomplete="off"
              class="c7n-pro-calendar-picker-range-input"
              placeholder=""
              style="left:0"
              type="text"
              value=""
            />
          </span>
        </span>
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-24"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-suffix-button c7n-pro-calendar-picker-range"
    >
      <label>
        <span
          class="c7n-pro-calendar-picker"
        >
          <span
            class="c7n-pro-calendar-picker-range-text"
          >
            <input
              class="c7n-pro-calendar-picker-range-start"
              placeholder="Start Date"
              readonly=""
              tabindex="-1"
              value="1987-11-22"
            />
            <span
              class="c7n-pro-calendar-picker-range-split"
            >
              ~
            </span>
            <input
              class="c7n-pro-calendar-picker-range-end"
              placeholder="End Date"
              readonly=""
              tabindex="-1"
              value="2016-11-22"
            />
            <input
              autocomplete="off"
              class="c7n-pro-calendar-picker-range-input"
              placeholder=""
              style="left:0"
              type="text"
              value=""
            />
          </span>
        </span>
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-24"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button c7n-pro-calendar-picker-range"
    >
      <label>
        <span
          class="c7n-pro-calendar-picker"
        >
          <span
            class="c7n-pro-calendar-picker-range-text"
          >
            <input
              class="c7n-pro-calendar-picker-range-start"
              placeholder="Choose Time"
              readonly=""
              tabindex="-1"
              value=""
            />
            <span
              class="c7n-pro-calendar-picker-range-split"
            >
              ~
            </span>
            <input
              class="c7n-pro-calendar-picker-range-end"
              placeholder="Choose Time"
              readonly=""
              tabindex="-1"
              value=""
            />
            <input
              autocomplete="off"
              class="c7n-pro-calendar-picker-range-input"
              name="time"
              placeholder=""
              style="left:0"
              type="text"
              value=""
            />
          </span>
        </span>
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-24"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-required c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button c7n-pro-calendar-picker-multiple c7n-pro-calendar-picker-range"
    >
      <input
        class="c7n-pro-calendar-picker-multiple-value"
        name="multipleDate"
        value=""
      />
      <label>
        <div
          class="c7n-pro-calendar-picker"
        >
          <ul>
            <span
              class="c7n-pro-calendar-picker-range-text"
            >
              <input
                class="c7n-pro-calendar-picker-range-start"
                placeholder="Choose Date"
                readonly=""
                tabindex="-1"
                value=""
              />
              <span
                class="c7n-pro-calendar-picker-range-split"
              >
                ~
              </span>
              <input
                class="c7n-pro-calendar-picker-range-end"
                placeholder="Choose Date"
                readonly=""
                tabindex="-1"
                value=""
              />
              <input
                autocomplete="off"
                class="c7n-pro-calendar-picker-range-input"
                name="multipleDate"
                placeholder=""
                style="left:0"
                type="text"
                value=""
              />
            </span>
          </ul>
        </div>
        <div
          class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
        >
          <i
            class="icon icon-close"
          />
        </div>
        <div
          class="c7n-pro-calendar-picker-suffix"
        >
          <i
            class="icon icon-date_range c7n-pro-calendar-picker-trigger"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/date-picker/demo/renderer.md correctly 1`] = `
Array [
  <span
    class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
  >
    <label>
      <input
        autocomplete="off"
        class="c7n-pro-calendar-picker"
        placeholder="Select date"
        type="text"
        value=""
      />
      <div
        class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
      >
        <i
          class="icon icon-close"
        />
      </div>
      <div
        class="c7n-pro-calendar-picker-suffix"
      >
        <i
          class="icon icon-date_range c7n-pro-calendar-picker-trigger"
        />
      </div>
    </label>
  </span>,
  <span />,
]
`;

exports[`renders ./components-pro/date-picker/demo/step.md correctly 1`] = `
Array [
  <span
    class="c7n-pro-calendar-picker-wrapper c7n-pro-calendar-picker-empty c7n-pro-calendar-picker-suffix-button"
  >
    <label>
      <input
        autocomplete="off"
        class="c7n-pro-calendar-picker"
        name="time"
        type="text"
        value=""
      />
      <div
        class="c7n-pro-calendar-picker-inner-button c7n-pro-calendar-picker-clear-button"
      >
        <i
          class="icon icon-close"
        />
      </div>
      <div
        class="c7n-pro-calendar-picker-suffix"
      >
        <i
          class="icon icon-date_range c7n-pro-calendar-picker-trigger"
        />
      </div>
    </label>
  </span>,
  <span />,
]
`;
